k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-nav-backend
  namespace: devops-nav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-nav-backend
  template:
    metadata:
      labels:
        app: devops-nav-backend
    spec:
      containers:
        - name: devops-nav-backend
          image: devops-nav-backend:latest
          ports:
            - containerPort: 3001
      imagePullSecrets:
        - name: nexus-docker-registry-auth
---
apiVersion: v1
kind: Service
metadata:
  name: devops-nav-backend-service
  namespace: devops-nav
spec:
  selector:
    app: devops-nav-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
  type: ClusterIP
