k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-nav-frontend
  namespace: devops-nav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-nav-frontend
  template:
    metadata:
      labels:
        app: devops-nav-frontend
    spec:
      containers:
        - name: devops-nav-frontend
          image: devops-nav-frontend:0.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: devops-nav-frontend-config
      imagePullSecrets:
        - name: nexus-docker-registry-auth
---
apiVersion: v1
kind: Service
metadata:
  name: devops-nav-frontend-service
  namespace: devops-nav
spec:
  selector:
    app: devops-nav-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
